<resources>
    <string name="app_name">Near by Customers</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="invite_sent">Invite Sent</string>
    <string name="filter">Filter</string>
    <string name="invite">Invite</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="select_region">Select Range in KM:</string>
    <string name="latitude_lable">Latitude:</string>
    <string name="longitude_lable">Longitude:</string>
</resources>
