<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">


   <include layout="@layout/fillter_customer_layout"/>

    <Button
        android:id="@+id/btnFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/filter"
        android:background="@color/colorAccent"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/margin_sixteen_dp"
        />


    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:id="@+id/recyclerViewCustomer"
        app:layout_constraintTop_toBottomOf="@id/spinnerCustomer"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/margin_sixteen_dp"
        android:layout_marginStart="@dimen/margin_sixteen_dp"
        android:layout_marginEnd="@dimen/margin_sixteen_dp"
        />

</LinearLayout>