...
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:elevation="@dimen/margin_eight_dp"
    android:id="@+id/customerLayout">


    <TextView
        android:id="@+id/txtId"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_sixteen_dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintHorizontal_weight="0.8"
...
